--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@
   );
 }
 
-input[type="date"]::-webkit-calendar-picker-indicator {
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
   cursor: pointer;
   filter: invert(0.8);
 }
